# ColorNet

./: .gitignore  Dockerfile  README.md  engine.py  main.py  pyproject.toml
gameplay/: random_round.py
graphics/: figure.py
state/: basic.py  difficulty.py  enter_answer.py  gameplay.py  score.py  title.py
test/: test_random_round.py
