[tool.poetry]
name = "colornet"
version = "0.1.0"
description = ""
authors = ["K0valevK <cosmo.kovalev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.6.0"
pygame-menu = "4.4.4"
pytest = "8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
